# FindProducts-Vector

./: .env.example  .gitignore  Makefile  pyproject.toml
list_products/: bot_main.py  flask_main.py  main.py
list_products/application/products/data/: ProductRepository.py
list_products/application/products/usecases/save_product/: save_product_dtos.py  save_product_usecase.py
list_products/application/products/usecases/search_product/: search_product_usecase.py
list_products/domain/general/: SimiliarityData.py
list_products/domain/products/entities/: product.py
list_products/infra/databases/chroma/repositories/: chroma_products_repository.py
list_products/infra/databases/chroma/utils/: embeddings.py
list_products/ui/api/: flask_main.py
list_products/utils/: envs.py
